--- a/app/src/main/res/layout/sign_in.xml
+++ b/app/src/main/res/layout/sign_in.xml
@@ -119,6 +119,7 @@
                 android:layout_marginEnd="20dp"
                 android:onClick="singUp"
                 android:text="@string/signUp" />
+            <!-- TODO Czy napewno sing? #120 linijka -->
 
 
         </LinearLayout>
