--- a/app/src/main/res/layout/fragment_create_customer.xml
+++ b/app/src/main/res/layout/fragment_create_customer.xml
@@ -5,95 +5,131 @@
     android:fillViewport="false">
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" android:orientation="vertical"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:padding="20dp">
+
         <TextView
+            android:id="@+id/nameShow"
             android:layout_width="match_parent"
-            android:layout_height="30dp" android:id="@+id/nameShow" android:layout_weight="0.5"
-            android:text="@string/customer_name"/>
+            android:layout_height="30dp"
+            android:layout_weight="0.5"
+            android:text="@string/customer_name" />
 
         <EditText
+            android:id="@+id/nameInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text"
+            android:layout_weight="0.15"
             android:ems="10"
-            android:id="@+id/nameInput" android:layout_weight="0.15"
-            />
+            android:inputType="text" />
+
         <TextView
-            android:text="@string/customer_surname"
+            android:id="@+id/surnameShow"
             android:layout_width="match_parent"
-            android:layout_height="30dp" android:id="@+id/surnameShow" android:layout_weight="0"
-            />
+            android:layout_height="30dp"
+            android:layout_weight="0"
+            android:text="@string/customer_surname" />
 
         <EditText
+            android:id="@+id/surnameInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text"
+            android:layout_weight="0.25"
             android:ems="10"
-            android:id="@+id/surnameInput" android:layout_weight="0.25"/>
+            android:inputType="text" />
+
         <TextView
-            android:text="@string/customer_company"
+            android:id="@+id/companyShow"
             android:layout_width="match_parent"
-            android:layout_height="30dp" android:id="@+id/companyShow" android:layout_weight="0.10"
-            android:paddingTop="2dp"/>
+            android:layout_height="30dp"
+            android:layout_weight="0.10"
+            android:paddingTop="2dp"
+            android:text="@string/customer_company" />
+
         <EditText
+            android:id="@+id/companyInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text"
+            android:layout_weight="0.25"
             android:ems="10"
-            android:id="@+id/companyInput" android:layout_weight="0.25"/>
+            android:inputType="text" />
+
         <TextView
-            android:text="@string/customer_nip"
+            android:id="@+id/nipShow"
             android:layout_width="match_parent"
-            android:layout_height="30dp" android:id="@+id/nipShow" android:layout_weight="0.10"
-            android:paddingTop="2dp"/>
+            android:layout_height="30dp"
+            android:layout_weight="0.10"
+            android:paddingTop="2dp"
+            android:text="@string/customer_nip" />
+
         <EditText
+            android:id="@+id/nipInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text"
+            android:layout_weight="0.25"
             android:ems="10"
-            android:id="@+id/nipInput" android:layout_weight="0.25"/>
+            android:inputType="number" />
+
         <TextView
-            android:text="@string/customer_email"
+            android:id="@+id/emailShow"
             android:layout_width="match_parent"
-            android:layout_height="30dp" android:id="@+id/emailShow" android:layout_weight="0.10"
-            android:paddingTop="2dp"/>
+            android:layout_height="30dp"
+            android:layout_weight="0.10"
+            android:paddingTop="2dp"
+            android:text="@string/customer_email" />
+
         <EditText
+            android:id="@+id/emailInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
+            android:layout_weight="0.25"
             android:ems="10"
-            android:id="@+id/emailInput" android:layout_weight="0.25"/>
+            android:inputType="textEmailAddress" />
+
         <TextView
-            android:text="@string/customer_address"
+            android:id="@+id/addressShow"
             android:layout_width="match_parent"
-            android:layout_height="30dp" android:id="@+id/addressShow" android:layout_weight="0.10"
-            android:paddingTop="2dp"/>
+            android:layout_height="30dp"
+            android:layout_weight="0.10"
+            android:paddingTop="2dp"
+            android:text="@string/customer_address" />
+
         <EditText
+            android:id="@+id/addressInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text"
+            android:layout_weight="0.25"
             android:ems="10"
-            android:id="@+id/addressInput" android:layout_weight="0.25"/>
+            android:inputType="textPostalAddress" />
+
         <TextView
-            android:text="@string/customer_telephone"
+            android:id="@+id/telephoneShow"
             android:layout_width="match_parent"
-            android:layout_height="30dp" android:id="@+id/telephoneShow" android:layout_weight="0.10"
-            android:paddingTop="2dp"/>
+            android:layout_height="30dp"
+            android:layout_weight="0.10"
+            android:paddingTop="2dp"
+            android:text="@string/customer_telephone" />
+
         <EditText
+            android:id="@+id/telephoneInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text"
+            android:layout_weight="0.25"
             android:ems="10"
-            android:id="@+id/telephoneInput" android:layout_weight="0.25"/>
+            android:inputType="phone" />
 
         <Button
-            android:text="@string/save"
+            android:id="@+id/save"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:id="@+id/save" android:layout_weight="0"
-            android:layout_marginBottom="5dp" android:layout_marginTop="5dp"
-            android:backgroundTint="@color/colorPrimary"/>
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_weight="0"
+            android:backgroundTint="@color/colorPrimary"
+            android:text="@string/save" />
 
     </LinearLayout>
 </ScrollView>
