--- a/app/src/main/res/layout/fragment_create_equipment.xml
+++ b/app/src/main/res/layout/fragment_create_equipment.xml
@@ -7,6 +7,7 @@
     <LinearLayout
          android:layout_width="match_parent"
         android:layout_height="wrap_content" android:orientation="vertical"
+        android:id="@+id/linearLayout"
         android:padding="20dp">
         <TextView
             android:layout_width="match_parent"
