--- a/app/src/main/res/layout/fragment_create_order.xml
+++ b/app/src/main/res/layout/fragment_create_order.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:id="@+id/linearLayout"
         android:padding="20dp">
 
         <TextView
