--- a/app/src/main/res/layout/order_item.xml
+++ b/app/src/main/res/layout/order_item.xml
@@ -36,7 +36,7 @@
         tools:text="Name" />
 
     <TextView
-        android:id="@+id/price"
+        android:id="@+id/rentalDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="16sp"
@@ -45,7 +45,7 @@
         tools:text="Price" />
 
     <TextView
-        android:id="@+id/amount"
+        android:id="@+id/returnDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
