--- a/app/src/main/res/layout/activity_show_equipment.xml
+++ b/app/src/main/res/layout/activity_show_equipment.xml
@@ -59,6 +59,7 @@
 
         <Button
             android:id="@+id/save"
+            android:onClick="save"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
